# otus_hw

./: CMakeLists.txt  test_version.cpp
.github/workflows/: release.yml
